--- a/index.html
+++ b/index.html
@@ -22,39 +22,47 @@
   </div>
 
   <div class="audio-files-container">
-    <audio id="cAudio" controls>
+    <audio id="cAudio" >
       <source src="./music_notes/c_note.mp3" type="audio/mpeg"</ty>></source>
       <source src="./music_notes/c_note.ogg" type="audio/ogg"</ty>></source>
       <source src="./music_notes/c_note.wav" type="audio/wav"</ty>></source>
     </audio>
-    <audio id="dAudio" controls>
+    <audio id="dAudio" >
       <source src="./music_notes/d_note.mp3" type="audio/mpeg"</ty>></source>
       <source src="./music_notes/d_note.ogg" type="audio/ogg"</ty>></source>
       <source src="./music_notes/d_note.wav" type="audio/wav"</ty>></source>
     </audio>
 
-    <audio id="eAudio" controls>
+    <audio id="eAudio" >
       <source src="./music_notes/e_note.mp3" type="audio/mpeg"</ty>></source>
       <source src="./music_notes/e_note.ogg" type="audio/ogg"</ty>></source>
       <source src="./music_notes/e_note.wav" type="audio/wav"</ty>></source>
     </audio>
-    <audio id="fAudio" controls>
+    <audio id="fAudio" >
       <source src="./music_notes/f_note.mp3" type="audio/mpeg"</ty>></source>
       <source src="./music_notes/f_note.ogg" type="audio/ogg"</ty>></source>
       <source src="./music_notes/f_note.wav" type="audio/wav"</ty>></source>
     </audio>
-    <audio id="aAudio" controls>
+    <audio id="gAudio" >
+      <source src="./music_notes/g_note.mp3" type="audio/mpeg"</ty>></source>
+      <source src="./music_notes/g_note.ogg" type="audio/ogg"</ty>></source>
+      <source src="./music_notes/g_note.wav" type="audio/wav"</ty>></source>
+    </audio>
+    <audio id="aAudio" >
       <source src="./music_notes/a_note.mp3" type="audio/mpeg"</ty>></source>
       <source src="./music_notes/a_note.ogg" type="audio/ogg"</ty>></source>
       <source src="./music_notes/a_note.wav" type="audio/wav"</ty>></source>
     </audio>
-    <audio id="bAudio" controls>
+    <audio id="bAudio" >
       <source src="./music_notes/b_note.mp3" type="audio/mpeg"</ty>></source>
       <source src="./music_notes/b_note.ogg" type="audio/ogg"</ty>></source>
       <source src="./music_notes/b_note.wav" type="audio/wav"</ty>></source>
     </audio>
 
   </div>
+  <script src="./js/app.js"></script>
+
+  </script>
 
 </body>
 </html>
